<resources>
    <string name="app_name">mohandesi pezeshki</string>
    <string name="Register">ثبت نام</string>
    <string name="PhoneNumber">شماره موبایل</string>
    <string name="Password">رمز عبور</string>
    <string name="Repassword">تکرار رمز عبور</string>
    <string name="ForgetPassword">فراموشی رمز عبور؟</string>
    <string name="RegisterText">ثبت نام</string>
    <string name="Youdonothaveanaccount">آیا حساب کاربری دارید؟</string>
    <string name="CreateAccount">ورود به حساب</string>
    <string name="mohandes">مهندس یار</string>
    <string name="dastyar">دستیار هوشمند مهندسی پزشکی</string>
    <string name="nointernet">به اینترنت متصل نیستی</string>
    <string name="talash">تلاش مجدد</string>
    <string name="send">به این شماره ارسال شد</string>
    <string name="enter">ورود</string>
    <string name="sendcode">کدارسالی</string>
    <string name="mohandesyar">مهندس یار</string>
    <string name="manabe">منابع پزشکی</string>
    <string name="resource">RESOURCE</string>
    <string name="film">فیلم آموزشی</string>
    <string name="video_tuturials">video tuturials</string>
    <string name="porsesh">پرسش و پاسخ</string>
    <string name="foroms">FOROMS</string>
    <string name="help">دفترچه راهنما</string>
    <string name="manuals">MANUALS</string>
    <string name="ghataat">فروشگاه قطعات</string>
    <string name="gheteshenasi">قطعه شناسی</string>
    <string name="support">پشتیبانی</string>
    <string name="about">درباره ما</string>
    <string name="profile">صفحه کاربری</string>
    <string name="forgotpassword">فراموشی رمز عبور</string>
    <string name="taid">تایید</string>
    <string name="notaccount">آیا حساب کاربری ندارید؟</string>
    <string name="daftarche">دفترچه راهنمای تجهیزات</string>
    <string name="search">جستجو بر اساس نام دستگاه یا شماره مدل</string>
    <string name="part">بخش بندی های تجهیزات پزشکی</string>
    <string name="icu">icu</string>
    <string name="ccu">ccu</string>
    <string name="Part">بخش</string>
    <string name="otagheamal">اتاق عمل</string>
    <string name="azmayeshgah">آزمایشگاه</string>
    <string name="radiolozhi">رادیولوژی</string>
    <string name="name">اسم دستگاه:</string>
    <string name="model">مدل دستگاه:</string>
    <string name="keshvar">کشور سازنده :</string>
    <string name="tozihat">توضیحات :</string>
    <string name="rahandazi">نحوه راه اندازی :</string>
    <string name="kaliber">کالیبراسیون :</string>
    <string name="UserPage">صفحه کاربری</string>
    <string name="Phone">شماره موبایل :</string>
    <string name="shahr">انتخاب شهر :</string>
    <string name="personal">اطلاعات شخصی :</string>
    <string name="sherkat">جهت شرکت در پرسش و پاسخ اطلاعات زیر را تکمیل نمایید.</string>
    <string name="namekhanevadegi">نام و نام خانوادگی</string>
    <string name="address">آدرس محل سکونت</string>
    <string name="email">آدرس ایمیل</string>
    <string name="time">تیم برنامه نویسی هکس کد</string>
    <string name="alisamadzadeh">علی صمد زاده</string>
    <string name="poya">پویا عبدالرشیدی</string>
    <string name="saeeid">سعید علی اصغر زاده</string>
    <string name="peyman">پیمان سیفی</string>
    <string name="khayemal">استاد راهنما : دکتر همایون ابراهیمیان</string>
    <string name="rah">راه های ارتباطی با ما</string>
    <string name="todo">TODO</string>
    <string name="close">بستن</string>
    <string name="tozihpass">رمز عبور جدید را وارد کنید</string>
    <string name="changepass">تغییر رمز عبور</string>
    <string name="phone">شماره موبایل :</string>
</resources>