<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@drawable/backgroundgradiant"
    tools:context=".view.activity.Splash">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="275dp"
        android:layout_height="122dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:srcCompat="@drawable/splash"
        android:contentDescription="@string/todo" />
    <io.github.yuweiguocn.lib.squareloading.SquareLoading
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView"
        app:squareColor="@android:color/white"
        app:squareSize="12dp"
        app:squareCorner="2dp"
        app:dividerSize="2dp"
        app:xCount="4"
        app:yCount="3"
        />

    <TextView
        android:id="@+id/textView12"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amim"
        android:text="@string/mohandes"
        android:textColor="#FFF"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_margin="15dp"
        android:fontFamily="@font/amim"
        android:textAlignment="center"
        android:layout_below="@+id/textView12"
        android:layout_height="wrap_content"
        android:layout_marginBottom="250dp"
        android:text="@string/dastyar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FFF" />
</RelativeLayout>