<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="data"
            type="com.example.mohandesipezeshki.model.ModelUserInfo" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:background="@mipmap/upperimg" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:fontFamily="@font/amim"
                    android:text="@string/UserPage"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image"
                android:layout_marginTop="-35dp"
                android:src="@mipmap/ic_launcher_round"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/blue_color"/>

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="-32dp"
                android:layout_gravity="center"
                android:background="@drawable/round_img"
                android:src="@drawable/ic_add_black_24dp"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="right|center"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phonetext"
                    android:textSize="25sp"
                    android:fontFamily="@font/amim"
                    android:textColor="@color/blue_color"
                    android:layout_marginRight="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textSize="25sp"
                    android:fontFamily="@font/amim"
                    android:textColor="@color/blue_color"
                    android:layout_marginRight="10dp"
                    />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shahr"
                android:textSize="25sp"
                android:fontFamily="@font/amim"
                android:textColor="@color/blue_color"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                tools:ignore="RtlHardcoded" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"

                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_height="100dp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_height="30dp"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="55dp" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textSize="25sp"
                android:fontFamily="@font/amim"
                android:textColor="@color/blue_color"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sherkat"
                android:textSize="15sp"
                android:fontFamily="@font/amim"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                tools:ignore="RtlHardcoded" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/namekhanevadegi"
                        android:background="@drawable/background_edt"
                        android:textSize="22sp"
                        android:layout_marginTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:fontFamily="@font/amim"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/blue_color"
                        android:textColorHint="@color/blue_color"
                        android:inputType="text"
                        android:importantForAutofill="no" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/address"
                        android:background="@drawable/background_edt"
                        android:textSize="22sp"
                        android:fontFamily="@font/amim"
                        android:layout_marginTop="15dp"
                        android:paddingRight="15dp"
                        android:paddingLeft="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/blue_color"
                        android:textColorHint="@color/blue_color"
                        android:inputType="text"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/email"
                        android:paddingLeft="15dp"
                        android:background="@drawable/background_edt"
                        android:textSize="22sp"
                        android:fontFamily="@font/amim"
                        android:layout_marginTop="15dp"
                        android:paddingRight="15dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/blue_color"
                        android:textColorHint="@color/blue_color"
                        android:inputType="text"/>

                </LinearLayout>



            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
</layout>
