<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="com.example.mohandesipezeshki.viewmodel.ViewModelCheckPhone" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr">

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="206dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints=""
            android:background="@drawable/backgroundedit"
            android:fontFamily="@font/amim"
            android:hint="@string/PhoneNumber"
            android:inputType="number"
            android:padding="15dp"
            android:text="@={data.phone}"
            android:textAlignment="center"
            android:textColor="@color/blue_color"
            android:textColorHint="@color/blue_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/backgroundbutton"
            android:fontFamily="@font/amim"
            android:onClick="@{data.CheckPhone}"
            android:text="@string/taid"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/amim"
            android:text="@string/forgotpassword"
            android:textColor="@color/blue_color"
            android:textSize="30sp" />


    </RelativeLayout>
</layout>
