<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="data"
            type="com.example.mohandesipezeshki.viewmodel.ViewModelChangePassword" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr">

        <EditText
            android:id="@+id/phone"
            android:fontFamily="@font/amim"
            android:textAlignment="center"
            android:inputType="textPassword"
            android:text="@={data.password}"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/blue_color"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="206dp"
            android:hint="@string/tozihpass"
            android:textColorHint="@color/blue_color"
            android:padding="15dp"
            android:background="@drawable/backgroundedit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextFields"
            android:autofillHints="" />
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taid"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:textStyle="bold"
            android:onClick="@{data.CheckCode}"
            android:fontFamily="@font/amim"
            android:textSize="30sp"
            android:layout_below="@+id/phone"
            android:textColor="#FFF"
            android:background="@drawable/backgroundbutton" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:fontFamily="@font/amim"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/changepass"
            android:textColor="@color/blue_color"
            android:textSize="30sp" />


    </RelativeLayout>
</layout>
